# PolarClock

./: CMakeLists.txt  README.md
.github/workflows/: deploy.yml
android/: .gitignore  gradlew  settings.gradle
android/app/: CMakeLists.txt  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/values/: strings.xml
build-web/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
docs/: PolarClock.data  PolarClock.js  PolarClock.wasm  index.html
shaders/: arc.frag  arc.vert  text.frag  text.vert
src/: android_main.cpp  arc_renderer.cpp  arc_renderer.h  asset_loader.cpp  asset_loader.h  main.cpp  polar_clock.cpp  polar_clock.h  renderer.cpp  renderer.h  resource_path.h  shader.cpp  shader.h  text_renderer.cpp  text_renderer.h  theme.h
src/platform/: android_platform.cpp  android_platform.h  desktop_platform.cpp  desktop_platform.h  emscripten_platform.cpp  emscripten_platform.h  platform.cpp  platform.h
web/: shell.html
